# NavekSoftHttpParcer

./: CMakeLists.txt  Http.txt  headers.cpp  headers.h  main.cpp
src/: CMakeLists.txt  headers.h  main.cpp
